2003-03-02  Per Bothner  <per@bothner.com>

	* Document.java (makeUrl):  The 'url' argument can be a URL as well as
	a string, and now also takes a 'base' parameter.
	(parse, apply):  Use new new makeURL.
	(apply):  Implement specification in allowing a sequence of URLs,
	and an optional 'base' second parameter.

2003-02-13  Per Bothner  <per@bothner.com>

	* Document.java (parse):  Call writeBaseUri if a TreeList.

2003-01-09  Per Bothner  <per@bothner.com>

	* Attributes.java:  Update for gnu.lists changes.
	* ElementType.java:  Likewise.
	* NamedAttributes.java:  Likewise.
	* NamedDescendants.java:  Likewise.
	* NodeType.java:  Likewise.
	* NamedChildren.java:  Likewise.
	* NamedChildren.java (namedChildren):  Exit if no more children.
	* ListItems.java (apply):  Optimize - try using consumePosRange.

2002-11-23  Per Bothner  <per@bothner.com>

	* IteratorItems.java:  New class, extends CpsProcedure.
	* ListItems.java:  New class, extends CpsProcedure.
	* Makefile.am (java_sources):  Update accordingly.

2002-11-20  Per Bothner  <bothner@bothner.com>

	* NamespaceEnv.java (get):  Handle "class:" namespaces.

2002-11-16  Per Bothner  <per@bothner.com>

	* NamespaceEnv.java (NAMESPACE_PREFIX):  Moved to Interpreter.
	(get):  Update acordingly.
	* DefineNamespace.java (scanForDefinitions):  Likewise.

	* AttributeConstructor.java, ElementConstructor.java, ElementType.java,
	NamedAttributes.java:  Use gnu.mapping.Symbol instead of gnu.xml.QName.

2002-07-28  Per Bothner  <per@bothner.com>

	* NodeType.java:  Also implement TypeValue.
	(toString):  New method.
	(emitCoerceOrNullMethod, emitTestIf, emitIsInstance):  New methods.
	* ElementType.java (emitTestIf, emitIsInstance):  Moved up to NodeType.
	(emitCoerceOrNullMethod):  New protected method, overrides NodeType.

2002-07-21  Per Bothner  <per@bothner.com>

	* MakeUnescapedData.java (inline):  Take extra ExpWalker parameter.

2002-07-02  Per Bothner  <per@bothner.com>
